--- a/app/src/main/res/layout/activity_start_sign_in.xml
+++ b/app/src/main/res/layout/activity_start_sign_in.xml
@@ -57,20 +57,37 @@
             android:layout_marginRight="10dp"
             layout="@layout/view_start_divider"/>
 
-        <classes.widget.ClearEditText
-            android:id="@+id/passwordEditText"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="12dp"
-            android:paddingBottom="12dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:hint="@string/input_password"
-            android:drawableRight="@drawable/delete_start_drawable"
-            android:textColor="@color/font_major_light"
-            android:textColorHint="@color/hint_white"
-            android:background="@null"
-            android:textCursorDrawable="@null"/>
+            android:orientation="horizontal">
+
+            <classes.widget.ClearEditText
+                android:id="@+id/passwordEditText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="12dp"
+                android:hint="@string/input_password"
+                android:drawableRight="@drawable/delete_start_drawable"
+                android:textColor="@color/font_major_light"
+                android:textColorHint="@color/hint_white"
+                android:background="@null"
+                android:textCursorDrawable="@null"/>
+
+            <ImageView
+                android:id="@+id/passwordImageView"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="16dp"
+                android:contentDescription="@string/password"
+                android:src="@drawable/eye_blank"/>
+
+        </LinearLayout>
 
         <include
             android:layout_width="match_parent"
@@ -90,46 +107,82 @@
             android:text="@string/sign_in"
             android:textColor="@color/start_button_text_color"/>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp">
+
+            <TextView
+                android:id="@+id/signUpTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:text="@string/quick_sign_up"
+                android:textColor="@color/font_start"
+                android:textSize="14sp"/>
+
+            <TextView
+                android:id="@+id/forgotTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:text="@string/forgot_password"
+                android:textSize="14sp"
+                android:textColor="@color/font_start"/>
+
+        </RelativeLayout>
+
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/signUpLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/dividerLayout"
         android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:gravity="center_vertical">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/wechatImageView"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="6dp">
 
-        <ImageView
-            android:id="@+id/signUpImageView"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:contentDescription="@string/sign_up"
-            android:src="@drawable/jump"/>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="1"
+            android:background="@color/start_divider"
+            android:layout_gravity="center_vertical"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/signUpImageView"
             android:layout_marginLeft="6dp"
-            android:text="@string/sign_up"
-            android:textColor="@color/font_start"
-            android:textSize="14sp"/>
+            android:layout_marginRight="6dp"
+            android:text="@string/third_party_sign_in"
+            android:textColor="@color/start_divider"/>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="1"
+            android:background="@color/start_divider"
+            android:layout_gravity="center_vertical"/>
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/forgotTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+    <ImageView
+        android:id="@+id/wechatImageView"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:padding="16dp"
-        android:text="@string/forgot_password"
-        android:textSize="14sp"
-        android:textColor="@color/font_start"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="12dp"
+        android:contentDescription="@string/wechat"
+        android:src="@drawable/wechat"/>
 
 </RelativeLayout>
