--- a/app/src/main/res/layout/activity_guide_start.xml
+++ b/app/src/main/res/layout/activity_guide_start.xml
@@ -110,7 +110,7 @@
     <Button
         android:id="@+id/joinButton"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/button_height"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:background="@drawable/button_light_solid_drawable"
