--- a/app/src/main/res/layout/activity_me_phone.xml
+++ b/app/src/main/res/layout/activity_me_phone.xml
@@ -8,7 +8,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/title_bar_height"
         android:background="@color/major_dark">
 
         <ImageView
@@ -41,7 +41,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/layout_height"
         android:orientation="horizontal"
         android:background="@drawable/me_item_drawable">
 
@@ -83,7 +83,7 @@
     <LinearLayout
         android:id="@+id/bindPhoneLayout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/layout_height"
         android:orientation="horizontal"
         android:background="@drawable/me_item_drawable">
 
