--- a/app/src/main/res/layout/activity_me_set_password.xml
+++ b/app/src/main/res/layout/activity_me_set_password.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/baseLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/background"
-    android:id="@+id/baseLayout">
+    android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/titleLayout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_bar_height"
         android:background="@color/major_dark">
@@ -27,22 +28,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/create_new_company"
+            android:text="@string/set_password"
             android:textColor="@color/major_light"
             android:textSize="20sp"/>
-
-        <TextView
-            android:id="@+id/nextTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-			android:paddingLeft="16dp"
-			android:paddingRight="16dp"
-			android:gravity="center"
-            android:text="@string/next"
-            android:textColor="@color/title_text_color"
-            android:textSize="16sp"/>
-
+        
     </RelativeLayout>
 
     <include
@@ -52,13 +41,13 @@
         layout="@layout/view_divider"/>
 
     <classes.widget.ClearEditText
-        android:id="@+id/companyEditText"
+        android:id="@+id/passwordEditText"
         android:layout_width="match_parent"
         android:layout_height="@dimen/edittext_height"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:background="@color/major_light"
-        android:hint="@string/input_company_name"
+        android:hint="@string/input_password"
         android:textColor="@color/font_major_dark"
         android:textSize="16sp"
         android:textCursorDrawable="@null"/>
@@ -67,5 +56,40 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         layout="@layout/view_divider"/>
+
+    <classes.widget.ClearEditText
+        android:id="@+id/confirmPasswordEditText"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/edittext_height"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:background="@color/major_light"
+        android:hint="@string/input_confirm_password"
+        android:textColor="@color/font_major_dark"
+        android:textSize="16sp"
+        android:textCursorDrawable="@null"/>
+
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        layout="@layout/view_divider"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="22dp">
+
+        <Button
+            android:id="@+id/submitButton"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/button_height"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/button_dark_drawable"
+            android:text="@string/submit"
+            android:textColor="@color/button_text_light_color"/>
+        
+    </RelativeLayout>
 
 </LinearLayout>
