--- a/app/src/main/res/layout/activity_guide_join_complete.xml
+++ b/app/src/main/res/layout/activity_guide_join_complete.xml
@@ -98,7 +98,7 @@
     <Button
         android:id="@+id/startButton"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/button_height"
         android:layout_marginBottom="60dp"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
