--- a/app/src/main/res/layout/activity_guide_pick_company.xml
+++ b/app/src/main/res/layout/activity_guide_pick_company.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/title_bar_height"
         android:background="@color/major_dark">
 
         <ImageView
@@ -45,11 +45,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp">
+        android:layout_height="@dimen/edittext_height">
 
         <ImageView
             android:id="@+id/searchImageView"
-            android:layout_width="52dp"
+            android:layout_width="@dimen/edittext_height"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:paddingTop="14dp"
