--- a/app/src/main/res/layout/activity_me_bind_phone.xml
+++ b/app/src/main/res/layout/activity_me_bind_phone.xml
@@ -8,7 +8,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/title_bar_height"
         android:background="@color/major_dark">
 
         <ImageView
@@ -41,7 +41,7 @@
     <classes.widget.ClearEditText
         android:id="@+id/phoneEditText"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/edittext_height"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:background="@color/major_light"
@@ -64,14 +64,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/edittext_height"
         android:orientation="horizontal"
         android:background="@color/major_light">
 
         <EditText
             android:id="@+id/codeEditText"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:paddingLeft="16dp"
             android:paddingRight="10dp"
