--- a/app/src/main/res/layout/activity_me_change_password.xml
+++ b/app/src/main/res/layout/activity_me_change_password.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:id="@+id/titleLayout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/title_bar_height"
         android:background="@color/major_dark">
 
         <ImageView
@@ -43,7 +43,7 @@
     <classes.widget.ClearEditText
         android:id="@+id/oldPasswordEditText"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/edittext_height"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:background="@color/major_light"
@@ -66,7 +66,7 @@
     <classes.widget.ClearEditText
         android:id="@+id/newPasswordEditText"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/edittext_height"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:background="@color/major_light"
@@ -83,7 +83,7 @@
     <classes.widget.ClearEditText
         android:id="@+id/confirmPasswordEditText"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/edittext_height"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:background="@color/major_light"
