--- a/app/src/main/res/layout/activity_reim_location.xml
+++ b/app/src/main/res/layout/activity_reim_location.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/title_bar_height"
         android:background="@color/major_dark">
 
         <ImageView
@@ -46,7 +46,7 @@
     <LinearLayout
         android:id="@+id/searchContainer"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/edittext_height"
         android:orientation="horizontal">
 
         <ImageView
@@ -60,7 +60,7 @@
         <classes.widget.ClearEditText
             android:id="@+id/locationEditText"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="match_parent"
             android:layout_marginLeft="16dp"
             android:paddingRight="16dp"
             android:background="@null"
