--- a/app/src/main/res/layout/activity_reim_member.xml
+++ b/app/src/main/res/layout/activity_reim_member.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/title_bar_height"
         android:background="@color/major_dark">
 
         <ImageView
@@ -75,7 +75,7 @@
     <LinearLayout
         android:id="@+id/searchContainer"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/edittext_height"
         android:orientation="horizontal">
 
         <ImageView
