--- a/app/src/main/res/layout/activity_report_edit.xml
+++ b/app/src/main/res/layout/activity_report_edit.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/title_bar_height"
         android:background="@color/major_dark">
 
         <ImageView
@@ -74,7 +74,7 @@
 			        <EditText
 			            android:id="@+id/titleEditText"
 			            android:layout_width="0dp"
-			            android:layout_height="50dp"
+			            android:layout_height="@dimen/edittext_height"
                         android:layout_weight="1"
 						android:layout_marginRight="14dp"
                         android:gravity="bottom"
