--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,12 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="title_bar_height">50dp</dimen>
+    <dimen name="tab_bar_height">50dp</dimen>
+    <dimen name="layout_height">48dp</dimen>
+    <dimen name="layout_with_one_divider_height">48.5dp</dimen>
+    <dimen name="layout_with_two_divider_height">49dp</dimen>
+    <dimen name="edittext_height">48dp</dimen>
     <dimen name="button_corner_radius">8dp</dimen>
     <dimen name="button_stroke_width">1dp</dimen>
     <dimen name="button_height">48dp</dimen>
