--- a/app/src/main/res/layout/activity_me_feedback.xml
+++ b/app/src/main/res/layout/activity_me_feedback.xml
@@ -80,22 +80,15 @@
         android:layout_height="0.5dp"
         layout="@layout/view_divider"/>
 
-    <RelativeLayout
+    <Button
+        android:id="@+id/submitButton"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="22dp">
-
-        <Button
-            android:id="@+id/submitButton"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/button_height"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:background="@drawable/button_dark_drawable"
-            android:text="@string/submit"
-            android:textColor="@color/button_text_light_color"/>
-        
-    </RelativeLayout>
+        android:layout_height="@dimen/button_height"
+        android:layout_marginTop="24dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/button_dark_drawable"
+        android:text="@string/submit"
+        android:textColor="@color/button_text_light_color"/>
 
 </LinearLayout>
