--- a/app/src/main/res/layout/activity_me_profile.xml
+++ b/app/src/main/res/layout/activity_me_profile.xml
@@ -348,21 +348,22 @@
 				android:layout_width="match_parent"
 				android:layout_height="0.5dp"
 		        layout="@layout/view_divider"/>
-            
-	        <include                 
-				android:layout_width="match_parent"
-				android:layout_height="0.5dp"
-				android:layout_marginTop="24dp"
-	        	layout="@layout/view_divider"/>
 			
             <RelativeLayout
                 android:id="@+id/passwordLayout"
 				android:layout_width="match_parent"
-				android:layout_height="@dimen/layout_height"
-				android:clickable="true"
+				android:layout_height="@dimen/layout_with_two_divider_height"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="18dp"
 				android:background="@drawable/me_item_drawable">
+
+                <include
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    layout="@layout/view_divider"/>
 					     
 				<TextView
+                    android:id="@+id/passwordTextView"
 				    android:layout_width="wrap_content"
 				    android:layout_height="wrap_content"
 				    android:layout_centerVertical="true"
@@ -370,7 +371,7 @@
 				    android:text="@string/change_password"
 				    android:textSize="16sp"
 				    android:textColor="@color/font_major_dark"/>
-				
+
 				<ImageView
 				    android:layout_width="wrap_content"
 				    android:layout_height="wrap_content"
@@ -379,14 +380,14 @@
 				    android:layout_marginRight="10dp"
 				    android:contentDescription="@string/next"
 				    android:src="@drawable/next"/>
-				
+
+                <include
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:layout_alignParentBottom="true"
+                    layout="@layout/view_divider"/>
+
 			</RelativeLayout>
-            
-	        <include                 
-				android:layout_width="match_parent"
-				android:layout_height="0.5dp"
-				android:layout_marginBottom="18dp"
-	        	layout="@layout/view_divider"/>
 			
         </LinearLayout>
         
