--- a/app/src/main/res/layout/window_me_bank_location.xml
+++ b/app/src/main/res/layout/window_me_bank_location.xml
@@ -36,8 +36,8 @@
 	  	layout="@layout/view_divider"/>
 
 	<LinearLayout
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
 	    android:orientation="horizontal"
 	    android:layout_gravity="center_horizontal">
 
